# mybot_ws

./: .gitignore  README.md
src/jaguar_pkg/: CMakeLists.txt  package.xml
src/jaguar_pkg/config/: config.rviz  config_view.rviz
src/jaguar_pkg/gazebo_plugins/: all.gazebo  camera.gazebo  genral.gazebo  lidar.gazebo  wheels.gazebo
src/jaguar_pkg/launch/: all_jaguar.launch  amcl.launch  gazebo.launch  jaguar.launch  octomap1.launch  octomap_mapping.launch  octomap_mapping_nodelet.launch  octomap_tracking_client.launch  octomap_tracking_server.launch  view_jaguar.launch
src/joy_stick/: CMakeLists.txt  package.xml
src/mini_jaguar_pkg/: CMakeLists.txt  package.xml
src/mini_jaguar_pkg/config/: config.rviz  view_mini_jaguar.rviz
src/mini_jaguar_pkg/config/control/: joint_states.yaml  robot_arm_control.yaml  trajectory_control.yaml
src/mini_jaguar_pkg/config/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml
src/mini_jaguar_pkg/gazebo_plugin/: camera.gazebo  genral.gazebo  lidar.gazebo  wheels.gazebo
src/mini_jaguar_pkg/launch/: all_mini.launch  amcl_demo.launch  amcl_demo1.launch  gazebo.launch  mini_jaguar_rivz.launch  rviz.launch  view_mini_jaguar.launch
src/mini_jaguar_pkg/meshes/: arm.stl
src/mini_jaguar_pkg/parts/: arm.xacro  cameras.xacro  fins.xacro  lidar_2d.xacro  velodyne.xacro  wheels.xacro
src/mini_jaguar_pkg/urdf/: cow.xacro  links_joints.xacro  mini.gazebo  mini.xacro  robot_parameters.xacro
src/nav_path/: CMakeLists.txt  package.xml
src/simple_navigation_goals/: CMakeLists.txt  package.xml
(+51 files in other folders)
