<?xml version="1.0"?>
<package format="2">
  <name>mini_jaguar_pkg</name>
  <version>0.0.0</version>
  <description>The mini_jaguar_pkg package</description>

  <author email="aalra021@fiu.edu">Abdulmueen Alrashide</author>
  <maintainer email="aalra021@fiu.edu">Abdulmueen Alrashide</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <export>

  </export>
</package>
